--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".test.activity.TestMessengerActivity">
+        <activity android:name=".test.activity.TestMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -22,6 +22,18 @@
         </activity>
         <activity
             android:name="example.com.templateprogram.activity.PhotoViewActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.Testone"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestCopy"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestMessengerActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestAIDLActivity"
             android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
