--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".base.MyApp"
@@ -34,6 +35,9 @@
             android:screenOrientation="portrait"/>
         <activity
             android:name=".test.activity.TestAIDLActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestJsonResolve"
             android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
