--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
         <activity
             android:name=".test.activity.TestJsonResolve"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestWebViewJSActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
