--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
         <activity
             android:name=".test.activity.TestWebViewJSActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestPicassoActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
