--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
         <activity
             android:name=".test.activity.TestDeBuggerActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestFontActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
