--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
 //    compile files('libs/photoview-library-1.2.2.jar')
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+    //Glide
+    compile 'com.github.bumptech.glide:glide:3.4.0'
 }
 
 
