--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
         <activity
             android:name=".test.activity.TestFontActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestGlideActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
