--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,10 @@ dependencies {
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     //Glide
     compile 'com.github.bumptech.glide:glide:3.4.0'
+
+    //googleAD
+    compile 'com.google.android.gms:play-services-ads:15.0.0'
+
 }
 
 
@@ -84,7 +88,12 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url "https://jitpack.io" }
+        maven {
+            url "https://maven.google.com"
+        }
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
@@ -146,4 +155,3 @@ buildscript {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
-
