--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,9 @@
         <activity
             android:name=".test.activity.TestGoogleBannerActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestGoogleInterstitialActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
