添加google admob Native Ads Advanced广告  添加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,9 @@
         <activity
             android:name=".test.activity.TestGoogleInterstitialActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestGoogleNativeAdsAdvancedActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
