添加google admob RewardedVideo(奖励视频)广告  添加

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     //googleAD
     compile 'com.google.android.gms:play-services-ads:15.0.0'
 
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
 }
 
 
