--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,9 @@
         <activity
             android:name=".test.activity.TestGoogleNativeAdsAdvancedActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestGoogleRewardedVideoActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
