RecyclerView实现带有头部的顶部悬浮置顶布局

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,9 @@
         <activity
             android:name=".test.activity.TestGoogleRewardedVideoActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestCeilingActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
