TestGifActivity 添加播放本地GIf文件代码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,9 @@
         <activity
             android:name=".test.activity.TestVideoViewActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestGifActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
