--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,10 +67,11 @@ dependencies {
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     //Glide
     compile 'com.github.bumptech.glide:glide:3.4.0'
-
     //googleAD
     compile 'com.google.android.gms:play-services-ads:15.0.0'
-
+    //加载gif
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
+    //约束布局
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
 }
