buildToolsVersion 改成 "26.0.2"  targetSdkVersion 改成 26

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name="example.com.templateprogram.activity.PhotoViewActivity"
-            android:screenOrientation="portrait"/>
+        <!--<activity-->
+            <!--android:name="example.com.templateprogram.activity.PhotoViewActivity"-->
+            <!--android:screenOrientation="portrait"/>-->
         <activity
             android:name=".test.activity.Testone"
             android:screenOrientation="portrait"/>
