--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'AndResGuard'
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
+//apply plugin: 'com.neenbedankt.android-apt'
+//apply plugin: 'com.google.gms.google-services'
 
 android {
     //秘钥使用
@@ -14,13 +15,13 @@ android {
     }
 
 
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         applicationId "example.com.templateprogram"
-        minSdkVersion 21
-        targetSdkVersion 25
+        minSdkVersion 17
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
 
@@ -41,9 +42,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:support-v4:26.1.0'
+    compile 'com.android.support:design:26.1.0'
     //配置Multidex
     compile 'com.android.support:multidex:1.0.1'
     // Stetho
@@ -63,12 +64,13 @@ dependencies {
     //图片处理
     compile 'com.github.bumptech.glide:glide:3.7.0'
 //    compile files('libs/photoview-library-1.2.2.jar')
-    compile 'com.github.chrisbanes:PhotoView:1.2.6'
+//    compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     //Glide
     compile 'com.github.bumptech.glide:glide:3.4.0'
     //googleAD
-    compile 'com.google.android.gms:play-services-ads:15.0.0'
+    compile 'com.google.android.gms:play-services-ads:15.0.1'
+//    compile 'com.google.firebase:firebase-core:15.0.0'//添加firebase
     //加载gif
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
     //约束布局
@@ -83,7 +85,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.1.16'
+        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.13'
     }
 }
 
@@ -145,7 +147,7 @@ andResGuard {
             "resources.arsc"
     ]
     sevenzip {
-        artifact = 'com.tencent.mm:SevenZip:1.1.16'
+        artifact = 'com.tencent.mm:SevenZip:1.2.13'
         //path = "/usr/local/bin/7za"
     }
 }
@@ -155,6 +157,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        //        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.android.tools.build:gradle:2.4.0-alpha7'
     }
 }
