--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'AndResGuard'
 apply plugin: 'com.android.application'
 //apply plugin: 'com.neenbedankt.android-apt'
-//apply plugin: 'com.google.gms.google-services'
 
 android {
     //秘钥使用
@@ -69,8 +68,9 @@ dependencies {
     //Glide
     compile 'com.github.bumptech.glide:glide:3.4.0'
     //googleAD
-    compile 'com.google.android.gms:play-services-ads:15.0.1'
-//    compile 'com.google.firebase:firebase-core:15.0.0'//添加firebase
+    //noinspection GradleCompatible
+    compile 'com.google.android.gms:play-services-ads:15.0.0'
+    compile 'com.google.firebase:firebase-core:15.0.0'//添加firebase
     //加载gif
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
     //约束布局
@@ -161,3 +161,5 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.4.0-alpha7'
     }
 }
+
+apply plugin: 'com.google.gms.google-services'
