--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,11 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!-- 用于读取手机当前的状态 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!-- 往sdcard中写入数据的权限 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".base.MyApp"
@@ -14,7 +19,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".test.activity.TestMainActivity">
+        <activity android:name=".activity.CheckPermissionsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -22,8 +27,15 @@
             </intent-filter>
         </activity>
         <!--<activity-->
-            <!--android:name="example.com.templateprogram.activity.PhotoViewActivity"-->
-            <!--android:screenOrientation="portrait"/>-->
+        <!--android:name="example.com.templateprogram.activity.PhotoViewActivity"-->
+        <!--android:screenOrientation="portrait"/>-->
+        <activity
+            android:name=".activity.PermissionsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/myTransparent"/>
+        <activity
+            android:name=".test.activity.TestMainActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".test.activity.Testone"
             android:screenOrientation="portrait"/>
