--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support:design:26.1.0'
@@ -75,7 +76,11 @@ dependencies {
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
     //约束布局
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
+    //Facebook
+//    compile('com.facebook.android:facebook-android-sdk:[4,5)') {
+//        exclude(group: 'com.android.support', module: 'appcompat-v7:27.0.2')
+//    }
+    compile 'com.facebook.android:facebook-android-sdk:4.28.0'
 }
 
 
