Android 通知的写法

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,9 @@
         <activity
             android:name=".test.activity.TestGifActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestNotificationActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
