--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,8 @@ dependencies {
 //        exclude(group: 'com.android.support', module: 'appcompat-v7:27.0.2')
 //    }
     compile 'com.facebook.android:facebook-android-sdk:4.28.0'
+    //Recyclerview-Gallery 滑动放大缩小
+    compile 'com.ryan.rv_gallery:rv-gallery:1.1.2'
 }
 
 
