--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,6 +94,9 @@
         <activity
             android:name=".test.activity.TestNotificationActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestRecyclerviewGalleryActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
