--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,6 +97,9 @@
         <activity
             android:name=".test.activity.TestRecyclerviewGalleryActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestWeixinContactsActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
