--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:26.1.0'
@@ -63,28 +63,29 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     //图片处理
     compile 'com.github.bumptech.glide:glide:3.7.0'
-//    compile files('libs/photoview-library-1.2.2.jar')
-//    compile 'com.github.chrisbanes:PhotoView:1.2.6'
+    //    compile files('libs/photoview-library-1.2.2.jar')
+    //    compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     //Glide
     compile 'com.github.bumptech.glide:glide:3.4.0'
     //googleAD
     //noinspection GradleCompatible
     compile 'com.google.android.gms:play-services-ads:15.0.0'
-    compile 'com.google.firebase:firebase-core:16.0.4'//添加firebase
+    compile 'com.google.firebase:firebase-core:16.0.4'
+    //添加firebase
     //加载gif
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
     //约束布局
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     //Facebook
-//    compile('com.facebook.android:facebook-android-sdk:[4,5)') {
-//        exclude(group: 'com.android.support', module: 'appcompat-v7:27.0.2')
-//    }
+    //    compile('com.facebook.android:facebook-android-sdk:[4,5)') {
+    //        exclude(group: 'com.android.support', module: 'appcompat-v7:27.0.2')
+    //    }
     compile 'com.facebook.android:facebook-android-sdk:4.28.0'
     //Recyclerview-Gallery 滑动放大缩小
     compile 'com.ryan.rv_gallery:rv-gallery:1.1.2'
-
     compile project(path: ':indexlib')
+    implementation project(':SlidingMenulibrary')
 }
 
 
