--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,9 @@
         <activity
             android:name=".test.activity.TestWeixinContactsActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestSlidingMenuActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
