slidingMenu 界面上下滑动菜单添加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,6 +103,9 @@
         <activity
             android:name=".test.activity.TestSlidingMenuActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestSlidingMenuActivity2"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
