添加android滑动标题栏

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,6 +106,9 @@
         <activity
             android:name=".test.activity.TestSlidingMenuActivity2"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestNavigationBarActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
