Activity 翻转效果实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -109,6 +109,9 @@
         <activity
             android:name=".test.activity.TestNavigationBarActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestFlipActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
