--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,8 @@ dependencies {
     compile 'com.ryan.rv_gallery:rv-gallery:1.1.2'
     compile project(path: ':indexlib')
     implementation project(':SlidingMenulibrary')
+
+    compile 'com.ifadai:particlesmasher:1.0.1'
 }
 
 
