--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,6 +115,9 @@
         <activity
             android:name=".test.activity.TestAESCryptActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestBrokenGlassActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
