recyclerView  添加刷新控件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,7 +87,13 @@ dependencies {
     compile project(path: ':indexlib')
     implementation project(':SlidingMenulibrary')
 
+    //粉碎效果
     compile 'com.ifadai:particlesmasher:1.0.1'
+
+    //SmartRefreshLayout  刷新控件
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
+    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14'//没有使用特殊Header，可以不加这行
+
 }
 
 
