--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,6 +121,9 @@
         <activity
             android:name=".test.activity.TestRippleAnimationActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestViewProliferationActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
