Android 3d 翻转 效果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -124,6 +124,9 @@
         <activity
             android:name=".test.activity.TestViewProliferationActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestAnimationActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
