--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'AndResGuard'
 apply plugin: 'com.android.application'
 //apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     //秘钥使用
@@ -36,6 +38,20 @@ android {
 
 
     useLibrary 'org.apache.http.legacy'//支持使用httpClient
+
+    //数据库版本以及Dao的相关设置
+    greendao {
+        //数据库schema版本
+        schemaVersion 1
+        //设置DaoMaster DaoSession Dao包名，默认的是bean所在的包名
+        daoPackage 'example.com.templateprogram'
+        //设置DaoMaster DaoSeeeion Dao目录，默认是build/generated/source/greendao
+        //targetGenDir 'src/main/greendao'
+        //设置true,自动生成测试单元
+        //generateTests 'true'
+        //设置生成的单元测试目录，默认是src/androidTest/java
+        //targetGenDirTests 'src/androidTest/java'
+    }
 }
 
 dependencies {
@@ -104,19 +120,20 @@ dependencies {
     //Recyclerview-Gallery 滑动放大缩小
     compile 'com.ryan.rv_gallery:rv-gallery:1.1.2'
     compile project(path: ':indexlib')
-    implementation project(':SlidingMenulibrary')
-
     //粉碎效果
     compile 'com.ifadai:particlesmasher:1.0.1'
-
     //SmartRefreshLayout  刷新控件
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
-    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14'
-
-    //没有使用特殊Header，可以不加这行
-
     //切换动画效果
     compile 'com.wuyr:rippleanimation:1.0.0'
+    //greendao数据库
+    compile 'org.greenrobot:greendao-generator:3.2.0'
+    compile 'org.greenrobot:greendao:3.2.0'
+//    compile 'net.zetetic:android-database-sqlcipher:3.5.9@aar'//开启数据库加密，若要使用数据库加密，需要导入
+//compile 'com.github.yuweiguocn:GreenDaoUpgradeHelper:v2.0.0' //使用数据库安全升级辅助GreenDaoUpgradleHepler时添加
+
+
+    implementation project(':SlidingMenulibrary')
     implementation project(':viewspreadtranslationlibrary')
 }
 
@@ -204,4 +221,4 @@ buildscript {
     }
 }
 
-apply plugin: 'com.google.gms.google-services'
+
