--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -127,6 +127,9 @@
         <activity
             android:name=".test.activity.TestAnimationActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestGreenDaoActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
