--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 //        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.google.gms:google-services:4.0.1' // google-services plugin
         classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.1'
     }
 }
 
