生成二维码图片，加上文字合成一张新的图片

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -139,6 +139,9 @@
         <activity
             android:name=".test.activity.TestBitmapCompress"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestImageQRCodeActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
