--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,6 +148,9 @@
         <activity
             android:name=".test.activity.TestArouseAppActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestAPIEncryptActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
