--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -151,6 +151,9 @@
         <activity
             android:name=".test.activity.TestAPIEncryptActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestLoopBannerActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
