--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -154,6 +154,9 @@
         <activity
             android:name=".test.activity.TestLoopBannerActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestSPEncryptDecryptActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
