glide 设置缓存路径，获取缓存文件路径

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -169,8 +169,10 @@
         <service
             android:name=".test.service.PingAidlService"
             android:process=":gigi"></service>
-
-
+        <!--Gilde 缓存配置 -->
+        <meta-data
+            android:name="example.com.templateprogram.utils.glide.MyGlideMoudle"
+            android:value="GlideModule"/>
         <!--Facebook -->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
