文字跑马灯功能添加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -157,6 +157,9 @@
         <activity
             android:name=".test.activity.TestSPEncryptDecryptActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestMarqueeTextViewActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
