--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,7 +147,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
-
+    //dagger2 控件
+    compile 'com.google.dagger:dagger:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
 
     implementation project(':SlidingMenulibrary')
     implementation project(':viewspreadtranslationlibrary')
