--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -166,6 +166,9 @@
         <activity
             android:name=".test.activity.TestDagger2Activity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestRXJAVAActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
