1.ConstrainLayout 约束布局 编写

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -169,6 +169,9 @@
         <activity
             android:name=".test.activity.TestRXJAVAActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestConstraintLayoutActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
