--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -172,6 +172,9 @@
         <activity
             android:name=".test.activity.TestConstraintLayoutActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestSortingAlgorithmActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
