--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -5,3 +5,4 @@ zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 #distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
 distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-5.1.1-all.zip
