仿美团排序

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -187,6 +187,9 @@
         <activity
             android:name=".test.activity.TestBottomLayoutThreeActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestMeituanSelectCityActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
