通知栏写法，第一阶段

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -190,6 +190,12 @@
         <activity
             android:name=".test.activity.TestMeituanSelectCityActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestNotificationActivity2"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".test.activity.TestNotificationActivity3"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".test.service.MyServiceUnBind"></service>
         <service android:name=".test.service.MyServiceBind"></service>
